--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,4 @@
+<body>
 <h1> Welcome to Super Rentals </h1>
 
 We hope you find exactly what you're looking for in a place to stay.
@@ -12,3 +13,4 @@ We hope you find exactly what you're looking for in a place to stay.
 
 {{#link-to 'about'}}About{{/link-to}}
 {{#link-to 'contact'}}Click here to contact us.{{/link-to}}
+</body>
