add computed properties

--- a/app/templates/city.hbs
+++ b/app/templates/city.hbs
@@ -1,6 +1,5 @@
-<h1> Welcome to {{model.name}} </h1>
-<h3>{{model.name}} is located in {{model.country}}</h3>
+
 
 {{city-tile city=model destroyCity="destroyCity"}}
 
-{{new-rental save2="save3" city=model}}
+{{new-rental city=model save2="save3"}}
