--- a/app/templates/components/city-tile.hbs
+++ b/app/templates/components/city-tile.hbs
@@ -1,8 +1,8 @@
-<h4>Rentals Available in {{city.name}}</h4>
+<h4>Location: {{fullLocation}}</h4>
 
+<h3>rentals available in {{city.name}}</h3>
 <ul>
   {{#each city.rentals as |rental|}}
-    <li>{{#link-to 'rental' rental.id}}{{rental.owner}}'s {{rental.type}} in {{rental.city.name}} {{rental.cost}}{{/link-to}}</li>
-    <button {{action 'destroyCity' city}}>Delete City</button>
+    {{rental-tile rental=rental}}
   {{/each}}
 </ul>
