--- a/app/templates/components/city-tile.hbs
+++ b/app/templates/components/city-tile.hbs
@@ -2,7 +2,7 @@
 
 <h3>rentals available in {{city.name}}</h3>
 <ul>
-  {{#each city.rentals as |rental|}}
-    {{rental-tile rental=rental}}
+  {{#each sortedRentals as |rental|}}
+    {{rental-tile rental=rental}} {{rental-cost rental}}
   {{/each}}
 </ul>
